# pda_intel

./: .env.example  .gitignore  .pre-commit-config.yaml  00_START_HERE.md  Dockerfile  FIRST_AGENT_GUIDE.md  GITHUB_ACTIONS.md  README.md  SETUP_COMPLETE.md  SETUP_INSTRUCTIONS.md  copilot-instructions.md  pyproject.toml  setup_github.sh  setup_github_secrets.sh  verify_setup.sh
.github/workflows/: code-quality.yml  integration.yml  test.yml  update-deps.yml
src/pda_intel/: __init__.py
src/pda_intel/agents/: __init__.py
src/pda_intel/agents/inference/: __init__.py
src/pda_intel/agents/orchestrators/: __init__.py
src/pda_intel/schemas/: __init__.py
src/pda_intel/services/: __init__.py
src/pda_intel/ui/: __init__.py
src/pda_intel/utils/: __init__.py
tests/: conftest.py
