[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pda-intel"
version = "0.1.0"
description = "Quotation Intelligence System for Shipping Agent - AI-powered PDA/FDA generation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Shipping Agent Team", email = "team@shippingagent.com"}
]

# Production dependencies
dependencies = [
    "google-generativeai>=0.3.0",
    "firebase-admin>=6.0.0",
    "google-cloud-aiplatform>=1.40.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-logging>=3.5.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "PyPDF2>=3.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

# Testing dependencies
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
]

# Documentation
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

# All extras
all = [
    "pda-intel[dev,test,docs]"
]

[project.urls]
Homepage = "https://github.com/shippingagent/pda-intel"
Documentation = "https://pda-intel.readthedocs.io"
Repository = "https://github.com/shippingagent/pda-intel.git"
Issues = "https://github.com/shippingagent/pda-intel/issues"

[tool.hatch.version]
path = "src/pda_intel/__init__.py"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.isort]
known-first-party = ["pda_intel", "src"]
known-third-party = ["firebase_admin", "google", "pydantic", "streamlit"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
exclude = ["venv", ".venv", "tests/fixtures"]

[[tool.mypy.overrides]]
module = ["firebase_admin.*", "google.*", "vertexai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require cloud services)",
    "slow: Slow tests",
    "sandbox: Tests that use sandbox Firestore/GCS",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/pda_intel"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2

[tool.uv]
index-url = "https://pypi.org/simple"
# Pin exact Python version for reproducibility
python-preference = "only-managed"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "ruff>=0.14.3",
]
